--- a/style.css
+++ b/style.css
@@ -155,7 +155,7 @@ header{
     text-align: right;
 }
 
-@media (max-width: 800px) {
+@media screen and (max-width: 800px) {
     #top-box{
         font-size: 15px;
     }
