--- a/style.css
+++ b/style.css
@@ -156,6 +156,9 @@ header{
 }
 
 @media screen and (max-width: 1000px) {
+    body{
+        padding: 0;
+    }
     #top-box{
         font-size: 15px;
     }
