--- a/style.css
+++ b/style.css
@@ -157,7 +157,7 @@ header{
 
 @media screen and (max-width: 1000px) {
     body{
-        padding: 0;
+        font-size: 15px;
     }
     #top-box{
         font-size: 15px;
