--- a/style.css
+++ b/style.css
@@ -20,7 +20,6 @@ header{
 #menu{
     width: 40%;
     display: flex;
-    font-size: 18px;
     align-items: center;
     justify-content: right;
 }
@@ -179,6 +178,9 @@ header{
     }
     #fourth>img{
         margin: 30% 10%;
+    }
+    #fifth{
+        font-size: 25px;
     }
     #ender{
         padding: 0;
