--- a/style.css
+++ b/style.css
@@ -179,7 +179,7 @@ header{
     #fourth>img{
         margin: 30% 10%;
     }
-    #fifth{
+    #fifth>p{
         font-size: 25px;
     }
     #ender{
